// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page /> renders correctly 1`] = `
<div
  className="Page  "
>
  <Helmet>
    <title>
      header
    </title>
    <body
      className=""
    />
  </Helmet>
  <Header
    as="h1"
  >
    <Icon
      as="i"
      name="rocket"
    />
    <HeaderContent>
      header
      <HeaderSubheader>
        subheader
      </HeaderSubheader>
    </HeaderContent>
  </Header>
  <Container
    fluid={true}
  >
    <p>
      Hello, World!
    </p>
  </Container>
</div>
`;

exports[`<Page /> renders correctly when fullWidth is set to true 1`] = `
<div
  className="Page PageFullWidth "
>
  <Helmet>
    <title>
      header
    </title>
    <body
      className=""
    />
  </Helmet>
  <Header
    as="h1"
  >
    <Icon
      as="i"
      name="rocket"
    />
    <HeaderContent>
      header
      <HeaderSubheader>
        subheader
      </HeaderSubheader>
    </HeaderContent>
  </Header>
  <Container
    fluid={true}
  >
    <p>
      Hello, World!
    </p>
  </Container>
</div>
`;

exports[`<Page /> renders correctly with a CSS class 1`] = `
<div
  className="Page  className"
>
  <Helmet>
    <title>
      header
    </title>
    <body
      className=""
    />
  </Helmet>
  <Header
    as="h1"
  >
    <Icon
      as="i"
      name="rocket"
    />
    <HeaderContent>
      header
      <HeaderSubheader>
        subheader
      </HeaderSubheader>
    </HeaderContent>
  </Header>
  <Container
    fluid={true}
  >
    <p>
      Hello, World!
    </p>
  </Container>
</div>
`;
